// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fields Home never renders > suggested + neverCompleted 1`] = `
{
  "neverCompleted": {
    "i-coils": false,
    "i-dryer-vent": false,
    "i-filter": false,
    "i-mixed": true,
    "i-nodue": true,
    "i-smoke": false,
    "i-undone": true,
  },
  "suggested": [
    "i-hvac-service",
    "i-descale",
    "i-flush",
  ],
}
`;

exports[`one Home load — a home with history, no user routines (the usual case) > renders exactly what it always rendered > core 1`] = `
{
  "stats": {
    "completedThisMonth": 3,
    "dueSoonCount": 4,
    "nextUp": {
      "dueDate": "2026-06-23",
      "windowStart": "2026-05-24",
    },
    "overdueTaskCount": 2,
    "scheduledTaskCount": 15,
    "totalItems": 6,
  },
  "tasks": {
    "dueSoon": [
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 0,
        "dueDate": "2026-06-23",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-coils",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-fridge",
        "itemName": "Refrigerator",
        "name": "Vacuum fridge coils",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_today",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 3,
        "dueDate": "2026-06-26",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-dryer-vent",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-dryer",
        "itemName": "Dryer",
        "name": "Clean dryer vent",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
      {
        "careType": "mixed",
        "daysOverdue": null,
        "daysUntilDue": 4,
        "dueDate": "2026-06-27",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-mixed",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-washer",
        "itemName": "Washer",
        "name": "Run washer clean cycle",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 0,
        "dueDate": "2026-06-23",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-nodue",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-washer",
        "itemName": "Washer",
        "name": "Inspect washer hoses",
        "priority": "medium",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_today",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 6,
        "dueDate": "2026-06-29",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-undone",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-dryer",
        "itemName": "Dryer",
        "name": "Clean lint trap housing",
        "priority": "medium",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
    ],
    "isMock": false,
    "needsAttention": [
      {
        "careType": "maintenance",
        "daysOverdue": 53,
        "daysUntilDue": null,
        "dueDate": "2026-05-01",
        "dueKind": "window",
        "duePhrase": "Been a while",
        "effort": null,
        "id": "i-smoke",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": null,
        "itemName": null,
        "name": "Test smoke alarms",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": "Check · skipped May",
        "trulyOverdue": false,
        "urgencyLevel": "critical",
        "windowState": "lapsed",
      },
      {
        "careType": "maintenance",
        "daysOverdue": 3,
        "daysUntilDue": null,
        "dueDate": "2026-06-20",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-filter",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": "item-furnace",
        "itemName": "Furnace",
        "name": "Replace furnace filter",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "overdue",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 0,
        "dueDate": "2026-06-23",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-coils",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-fridge",
        "itemName": "Refrigerator",
        "name": "Vacuum fridge coils",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_today",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 3,
        "dueDate": "2026-06-26",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-dryer-vent",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-dryer",
        "itemName": "Dryer",
        "name": "Clean dryer vent",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
      {
        "careType": "mixed",
        "daysOverdue": null,
        "daysUntilDue": 4,
        "dueDate": "2026-06-27",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-mixed",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-washer",
        "itemName": "Washer",
        "name": "Run washer clean cycle",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 0,
        "dueDate": "2026-06-23",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-nodue",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-washer",
        "itemName": "Washer",
        "name": "Inspect washer hoses",
        "priority": "medium",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_today",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 6,
        "dueDate": "2026-06-29",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-undone",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-dryer",
        "itemName": "Dryer",
        "name": "Clean lint trap housing",
        "priority": "medium",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
    ],
    "nextDueDate": null,
    "overdue": [
      {
        "careType": "maintenance",
        "daysOverdue": 53,
        "daysUntilDue": null,
        "dueDate": "2026-05-01",
        "dueKind": "window",
        "duePhrase": "Been a while",
        "effort": null,
        "id": "i-smoke",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": null,
        "itemName": null,
        "name": "Test smoke alarms",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": "Check · skipped May",
        "trulyOverdue": false,
        "urgencyLevel": "critical",
        "windowState": "lapsed",
      },
      {
        "careType": "maintenance",
        "daysOverdue": 3,
        "daysUntilDue": null,
        "dueDate": "2026-06-20",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-filter",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": "item-furnace",
        "itemName": "Furnace",
        "name": "Replace furnace filter",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "overdue",
        "windowState": "open",
      },
    ],
    "overdueEssential": [
      {
        "careType": "maintenance",
        "daysOverdue": 53,
        "daysUntilDue": null,
        "dueDate": "2026-05-01",
        "dueKind": "window",
        "duePhrase": "Been a while",
        "effort": null,
        "id": "i-smoke",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": null,
        "itemName": null,
        "name": "Test smoke alarms",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": "Check · skipped May",
        "trulyOverdue": false,
        "urgencyLevel": "critical",
        "windowState": "lapsed",
      },
      {
        "careType": "maintenance",
        "daysOverdue": 3,
        "daysUntilDue": null,
        "dueDate": "2026-06-20",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-filter",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": "item-furnace",
        "itemName": "Furnace",
        "name": "Replace furnace filter",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "overdue",
        "windowState": "open",
      },
    ],
    "overdueRecommended": [],
  },
}
`;

exports[`one Home load — a home with history, no user routines (the usual case) > renders exactly what it always rendered > extras 1`] = `
{
  "cleaningGuides": [
    {
      "estimatedMinutes": 45,
      "id": "i-deep-oven",
      "itemUnitId": "item-range",
      "title": "Clean the Range",
    },
    {
      "estimatedMinutes": 15,
      "id": "i-deleted-clean",
      "itemUnitId": "item-fridge",
      "title": "Clean the Refrigerator",
    },
    {
      "estimatedMinutes": 15,
      "id": "i-mixed",
      "itemUnitId": "item-washer",
      "title": "Clean the Washer",
    },
    {
      "estimatedMinutes": 40,
      "id": "i-baseboards",
      "itemUnitId": null,
      "title": "Wipe baseboards",
    },
    {
      "estimatedMinutes": 5,
      "id": "i-wipe-gasket",
      "itemUnitId": "item-dishwasher",
      "title": "Clean the Dishwasher",
    },
  ],
  "expiringWarranties": [
    {
      "days_remaining": 7,
      "display_name": "Range",
      "item_unit_id": "item-range",
      "warranty_expiry_date": "2026-06-30",
    },
    {
      "days_remaining": 22,
      "display_name": "Washer",
      "item_unit_id": "item-washer",
      "warranty_expiry_date": "2026-07-15",
    },
    {
      "days_remaining": 39,
      "display_name": "Furnace",
      "item_unit_id": "item-furnace",
      "warranty_expiry_date": "2026-08-01",
    },
  ],
  "insights": [
    {
      "body": "Check refrigerator door seals and clean the coils.",
      "category": "Seasonal",
      "id": "seasonal-5",
      "title": "Summer ready",
      "variant": "amber",
    },
  ],
  "notices": {
    "missingDetails": [
      {
        "display_name": "Dishwasher",
        "item_unit_id": "item-dishwasher",
      },
      {
        "display_name": "Refrigerator",
        "item_unit_id": "item-fridge",
      },
    ],
    "recalls": [
      {
        "display_name": "Refrigerator",
        "item_unit_id": "item-fridge",
        "recall_notes": "Ice maker recall",
      },
    ],
  },
  "upcoming": [
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-coils",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Refrigerator",
      "item_id": "item-fridge",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": "Kitchen",
      "next_due_date": "2026-06-23",
      "notes": null,
      "priority": "high",
      "safetyNote": null,
      "task_template_id": "tpl-coils",
      "title": "Vacuum fridge coils",
    },
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-dryer-vent",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Dryer",
      "item_id": "item-dryer",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": "Laundry",
      "next_due_date": "2026-06-26",
      "notes": null,
      "priority": "high",
      "safetyNote": null,
      "task_template_id": "tpl-dryer-vent",
      "title": "Clean dryer vent",
    },
    {
      "careType": "mixed",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-mixed",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Washer",
      "item_id": "item-washer",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-06-27",
      "notes": null,
      "priority": "high",
      "safetyNote": null,
      "task_template_id": "tpl-mixed",
      "title": "Run washer clean cycle",
    },
    {
      "careType": "cleaning",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-baseboards",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": null,
      "item_id": null,
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-06-28",
      "notes": null,
      "priority": "medium",
      "safetyNote": null,
      "task_template_id": "tpl-baseboards",
      "title": "Wipe baseboards",
    },
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-undone",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Dryer",
      "item_id": "item-dryer",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-06-29",
      "notes": null,
      "priority": "medium",
      "safetyNote": null,
      "task_template_id": "tpl-undone",
      "title": "Clean lint trap housing",
    },
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-flush",
      "isDueSoon": false,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Water Heater",
      "item_id": "item-water-heater",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-07-02",
      "notes": null,
      "priority": "medium",
      "safetyNote": null,
      "task_template_id": "tpl-flush",
      "title": "Flush water heater",
    },
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "In Jul",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-descale",
      "isDueSoon": false,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Water Heater",
      "item_id": "item-water-heater",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-07-20",
      "notes": null,
      "priority": "high",
      "safetyNote": null,
      "task_template_id": "tpl-descale",
      "title": "Check anode rod",
    },
  ],
}
`;

exports[`one Home load — a home with history, no user routines (the usual case) > still starts the instance a recurring cleaning template lost — and writes nothing else 1`] = `
[
  {
    "dueDate": "2026-09-21",
    "path": "homes/h1/taskInstances/auto-0001",
    "status": "scheduled",
    "title": "Wash fridge shelves",
  },
  {
    "dueDate": "2026-07-23",
    "path": "homes/h1/taskInstances/auto-0002",
    "status": "scheduled",
    "title": "Wipe dryer drum",
  },
]
`;

exports[`one Home load — with user routines (guides come from the routines) > renders exactly what it always rendered > core 1`] = `
{
  "stats": {
    "completedThisMonth": 3,
    "dueSoonCount": 4,
    "nextUp": {
      "dueDate": "2026-06-23",
      "windowStart": "2026-05-24",
    },
    "overdueTaskCount": 2,
    "scheduledTaskCount": 15,
    "totalItems": 6,
  },
  "tasks": {
    "dueSoon": [
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 0,
        "dueDate": "2026-06-23",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-coils",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-fridge",
        "itemName": "Refrigerator",
        "name": "Vacuum fridge coils",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_today",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 3,
        "dueDate": "2026-06-26",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-dryer-vent",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-dryer",
        "itemName": "Dryer",
        "name": "Clean dryer vent",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
      {
        "careType": "mixed",
        "daysOverdue": null,
        "daysUntilDue": 4,
        "dueDate": "2026-06-27",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-mixed",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-washer",
        "itemName": "Washer",
        "name": "Run washer clean cycle",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 0,
        "dueDate": "2026-06-23",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-nodue",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-washer",
        "itemName": "Washer",
        "name": "Inspect washer hoses",
        "priority": "medium",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_today",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 6,
        "dueDate": "2026-06-29",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-undone",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-dryer",
        "itemName": "Dryer",
        "name": "Clean lint trap housing",
        "priority": "medium",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
    ],
    "isMock": false,
    "needsAttention": [
      {
        "careType": "maintenance",
        "daysOverdue": 53,
        "daysUntilDue": null,
        "dueDate": "2026-05-01",
        "dueKind": "window",
        "duePhrase": "Been a while",
        "effort": null,
        "id": "i-smoke",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": null,
        "itemName": null,
        "name": "Test smoke alarms",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": "Check · skipped May",
        "trulyOverdue": false,
        "urgencyLevel": "critical",
        "windowState": "lapsed",
      },
      {
        "careType": "maintenance",
        "daysOverdue": 3,
        "daysUntilDue": null,
        "dueDate": "2026-06-20",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-filter",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": "item-furnace",
        "itemName": "Furnace",
        "name": "Replace furnace filter",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "overdue",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 0,
        "dueDate": "2026-06-23",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-coils",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-fridge",
        "itemName": "Refrigerator",
        "name": "Vacuum fridge coils",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_today",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 3,
        "dueDate": "2026-06-26",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-dryer-vent",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-dryer",
        "itemName": "Dryer",
        "name": "Clean dryer vent",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
      {
        "careType": "mixed",
        "daysOverdue": null,
        "daysUntilDue": 4,
        "dueDate": "2026-06-27",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-mixed",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-washer",
        "itemName": "Washer",
        "name": "Run washer clean cycle",
        "priority": "high",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 0,
        "dueDate": "2026-06-23",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-nodue",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-washer",
        "itemName": "Washer",
        "name": "Inspect washer hoses",
        "priority": "medium",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_today",
        "windowState": "open",
      },
      {
        "careType": "maintenance",
        "daysOverdue": null,
        "daysUntilDue": 6,
        "dueDate": "2026-06-29",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-undone",
        "isDueSoon": true,
        "isOverdue": false,
        "itemId": "item-dryer",
        "itemName": "Dryer",
        "name": "Clean lint trap housing",
        "priority": "medium",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "due_soon",
        "windowState": "open",
      },
    ],
    "nextDueDate": null,
    "overdue": [
      {
        "careType": "maintenance",
        "daysOverdue": 53,
        "daysUntilDue": null,
        "dueDate": "2026-05-01",
        "dueKind": "window",
        "duePhrase": "Been a while",
        "effort": null,
        "id": "i-smoke",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": null,
        "itemName": null,
        "name": "Test smoke alarms",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": "Check · skipped May",
        "trulyOverdue": false,
        "urgencyLevel": "critical",
        "windowState": "lapsed",
      },
      {
        "careType": "maintenance",
        "daysOverdue": 3,
        "daysUntilDue": null,
        "dueDate": "2026-06-20",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-filter",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": "item-furnace",
        "itemName": "Furnace",
        "name": "Replace furnace filter",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "overdue",
        "windowState": "open",
      },
    ],
    "overdueEssential": [
      {
        "careType": "maintenance",
        "daysOverdue": 53,
        "daysUntilDue": null,
        "dueDate": "2026-05-01",
        "dueKind": "window",
        "duePhrase": "Been a while",
        "effort": null,
        "id": "i-smoke",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": null,
        "itemName": null,
        "name": "Test smoke alarms",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": "Check · skipped May",
        "trulyOverdue": false,
        "urgencyLevel": "critical",
        "windowState": "lapsed",
      },
      {
        "careType": "maintenance",
        "daysOverdue": 3,
        "daysUntilDue": null,
        "dueDate": "2026-06-20",
        "dueKind": "window",
        "duePhrase": "Good to do now",
        "effort": null,
        "id": "i-filter",
        "isDueSoon": false,
        "isOverdue": true,
        "itemId": "item-furnace",
        "itemName": "Furnace",
        "name": "Replace furnace filter",
        "priority": "critical",
        "riskLevel": null,
        "safetyNote": null,
        "trulyOverdue": false,
        "urgencyLevel": "overdue",
        "windowState": "open",
      },
    ],
    "overdueRecommended": [],
  },
}
`;

exports[`one Home load — with user routines (guides come from the routines) > renders exactly what it always rendered > extras 1`] = `
{
  "cleaningGuides": [
    {
      "estimatedMinutes": 30,
      "id": "tpl-routine-bath",
      "itemUnitId": null,
      "title": "Bathroom scrub",
    },
    {
      "estimatedMinutes": 20,
      "id": "tpl-routine-kitchen",
      "itemUnitId": null,
      "title": "Kitchen reset",
    },
  ],
  "expiringWarranties": [
    {
      "days_remaining": 7,
      "display_name": "Range",
      "item_unit_id": "item-range",
      "warranty_expiry_date": "2026-06-30",
    },
    {
      "days_remaining": 22,
      "display_name": "Washer",
      "item_unit_id": "item-washer",
      "warranty_expiry_date": "2026-07-15",
    },
    {
      "days_remaining": 39,
      "display_name": "Furnace",
      "item_unit_id": "item-furnace",
      "warranty_expiry_date": "2026-08-01",
    },
  ],
  "insights": [
    {
      "body": "Check refrigerator door seals and clean the coils.",
      "category": "Seasonal",
      "id": "seasonal-5",
      "title": "Summer ready",
      "variant": "amber",
    },
  ],
  "notices": {
    "missingDetails": [
      {
        "display_name": "Dishwasher",
        "item_unit_id": "item-dishwasher",
      },
      {
        "display_name": "Refrigerator",
        "item_unit_id": "item-fridge",
      },
    ],
    "recalls": [
      {
        "display_name": "Refrigerator",
        "item_unit_id": "item-fridge",
        "recall_notes": "Ice maker recall",
      },
    ],
  },
  "upcoming": [
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-coils",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Refrigerator",
      "item_id": "item-fridge",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": "Kitchen",
      "next_due_date": "2026-06-23",
      "notes": null,
      "priority": "high",
      "safetyNote": null,
      "task_template_id": "tpl-coils",
      "title": "Vacuum fridge coils",
    },
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-dryer-vent",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Dryer",
      "item_id": "item-dryer",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": "Laundry",
      "next_due_date": "2026-06-26",
      "notes": null,
      "priority": "high",
      "safetyNote": null,
      "task_template_id": "tpl-dryer-vent",
      "title": "Clean dryer vent",
    },
    {
      "careType": "mixed",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-mixed",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Washer",
      "item_id": "item-washer",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-06-27",
      "notes": null,
      "priority": "high",
      "safetyNote": null,
      "task_template_id": "tpl-mixed",
      "title": "Run washer clean cycle",
    },
    {
      "careType": "cleaning",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-baseboards",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": null,
      "item_id": null,
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-06-28",
      "notes": null,
      "priority": "medium",
      "safetyNote": null,
      "task_template_id": "tpl-baseboards",
      "title": "Wipe baseboards",
    },
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-undone",
      "isDueSoon": true,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Dryer",
      "item_id": "item-dryer",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-06-29",
      "notes": null,
      "priority": "medium",
      "safetyNote": null,
      "task_template_id": "tpl-undone",
      "title": "Clean lint trap housing",
    },
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "Good to do now",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-flush",
      "isDueSoon": false,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Water Heater",
      "item_id": "item-water-heater",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-07-02",
      "notes": null,
      "priority": "medium",
      "safetyNote": null,
      "task_template_id": "tpl-flush",
      "title": "Flush water heater",
    },
    {
      "careType": "maintenance",
      "completionCount": 0,
      "description": null,
      "dueKind": "window",
      "duePhrase": "In Jul",
      "effort": null,
      "frequency_unit": null,
      "frequency_value": null,
      "id": "i-descale",
      "isDueSoon": false,
      "isOverdue": false,
      "is_recurring": false,
      "itemName": "Water Heater",
      "item_id": "item-water-heater",
      "lastCompletedAt": null,
      "locationId": null,
      "locationName": null,
      "next_due_date": "2026-07-20",
      "notes": null,
      "priority": "high",
      "safetyNote": null,
      "task_template_id": "tpl-descale",
      "title": "Check anode rod",
    },
  ],
}
`;
